# Rabbit-in-a-Blender

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Pipfile  README.md  build.sh  cosign.pub  index.html  pyproject.toml  riab.ini.example  test.py
.github/workflows/: build_container.yml  publish_to_pypi.yml  publish_to_pypi_and_build_container.yml
assets/: cleanup.dd33b7aa.cast  create_folders.fb829adf.cast  index.22e5379b.js  index.4cd79424.css  index.4cdf5caf.css  index.5bd2fdc6.css  index.633277a4.js  index.7f6bbff5.css  index.a7ae8141.css  index.ac0f4353.js  index.cdeb8f9b.js  index.dd6e5661.js  install.a2d0abf4.cast  run_etl.c5fde69e.cast
docs/: cli.md  config.md  database_engines.md  getting_started.md  installation.md  mappings.md  post-process-CPT4-concepts
libs/: DataQualityDashboard.md  SqlRender.md
omop-etl/: cli.py
omop-etl/etl/: __init__.py  cdm_5.4_schema.json  etl.py
omop-etl/etl/bigquery/: __init__.py  bigquery.py  gcp.py
omop-etl/etl/bigquery/templates/: CONCEPT_ID_swap_create.sql.jinja  CONCEPT_ID_swap_merge.sql.jinja  CONCEPT_merge.sql.jinja  OMOPCDM_bigquery_5.4_clustering_fields.json  SOURCE_TO_CONCEPT_MAP_merge.sql.jinja  SOURCE_TO_CONCEPT_MAP_update_invalid_reason.sql.jinja  vocabulary_table_merge.sql.jinja  {omop_table}__{concept_id_column}_usagi_add_custom_concepts.sql.jinja  {omop_table}__{concept_id_column}_usagi_cast_concepts.sql.jinja  {omop_table}__{concept_id_column}_usagi_create.sql.jinja  {omop_table}__{concept_id_column}_usagi_merge.sql.jinja  {omop_table}__{concept_id_column}_usagi_update_custom_concepts.sql.jinja  {omop_table}_merge.sql.jinja  {primary_key_column}_swap_create.sql.jinja  {primary_key_column}_swap_merge.sql.jinja
omop-etl/etl/bigquery/templates/cleanup/: CONCEPT_ANCESTOR_remove_custom_concepts.sql.jinja  CONCEPT_ANCESTOR_remove_custom_concepts_by_{omop_table}__{concept_id_column}_usagi_table.sql.jinja  CONCEPT_RELATIONSHIP_remove_custom_concepts.sql.jinja  CONCEPT_RELATIONSHIP_remove_custom_concepts_by_{omop_table}__{concept_id_column}_usagi_table.sql.jinja  CONCEPT_remove_custom_concepts.sql.jinja  CONCEPT_remove_custom_concepts_by_{omop_table}__{concept_id_column}_concept_table.sql.jinja  CONCEPT_remove_custom_concepts_by_{omop_table}__{concept_id_column}_usagi_table.sql.jinja  SOURCE_TO_CONCEPT_MAP_remove_concepts_by_{omop_table}__{concept_id_column}_usagi_table.sql.jinja  truncate.sql.jinja
omop-etl/src/: cli.py
omop-etl/src/etl/: bigquery.py
omop-etl/src/etl/utils/: gcp.py
resources/img/: rabbitinablenderlogo.pdn  rabbitinablenderlogo_without_text.pdn  two_stage_rocket.pdn
src/riab/: __init__.py  cli.py
src/riab/assets/: dqd.css
src/riab/dqd/csv/: OMOP_CDMv5.4_Check_Descriptions.csv  OMOP_CDMv5.4_Concept_Level.csv  OMOP_CDMv5.4_Field_Level.csv  OMOP_CDMv5.4_Table_Level.csv
src/riab/etl/: __init__.py  achilles.py  cdm_5.4_events.json  cdm_5.4_schema.json  cleanup.py  create_cdm_folders.py  create_etl_folders.py  create_omop_db.py  data_quality.py  data_quality_dashboard.py  db.py  etl.py  etl_base.py  etl_flow.json  import_vocabularies.py  sql_render_base.py  utils.py
src/riab/etl/bigquery/: __init__.py  achilles.py  bigquery.py  bigquery_achilles.py  bigquery_cleanup.py  bigquery_create_cdm_folders.py  bigquery_create_etl_folders.py  bigquery_create_omop_db.py  bigquery_data_quality.py  bigquery_data_quality_dashboard.py  bigquery_etl.py  bigquery_etl_base.py  bigquery_import_vocabularies.py  cleanup.py  create_cdm_folders.py  create_omop_db.py  data_quality.py  data_quality_dashboard.py  etl.py  etl_base.py  gcp.py  import_vocabularies.py
src/riab/etl/bigquery/templates/: CONCEPT_ID_swap_create.sql.jinja  CONCEPT_ID_swap_merge.sql.jinja  CONCEPT_merge.sql.jinja  DataQualityDashboard_ddl.sql.jinja  OMOPCDM_bigquery_5.4_ddl.sql  SOURCE_ID_TO_OMOP_ID_MAP_create.sql.jinja  SOURCE_ID_TO_OMOP_ID_MAP_merge.sql.jinja  SOURCE_ID_TO_OMOP_ID_MAP_update_invalid_reason.sql.jinja  SOURCE_TO_CONCEPT_MAP_check_for_duplicates.sql.jinja  SOURCE_TO_CONCEPT_MAP_merge.sql.jinja  SOURCE_TO_CONCEPT_MAP_update_invalid_reason.sql.jinja  all_table_names.sql.jinja  all_work_table_names.sql.jinja  create_omop_work_table.sql.jinja  get_table_columns.sql.jinja  sample_source_query.sql.jinja  vocabulary_table_recreate.sql.jinja  {omop_table}__{concept_id_column}_concept_create.sql.jinja  {omop_table}__{concept_id_column}_usagi_add_custom_concepts.sql.jinja  {omop_table}__{concept_id_column}_usagi_cast_concepts.sql.jinja  {omop_table}__{concept_id_column}_usagi_create.sql.jinja  {omop_table}__{concept_id_column}_usagi_update_custom_concepts.sql.jinja  {omop_table}_get_event_tables.sql.jinja  {omop_table}_merge.sql.jinja  {omop_table}_{sql_file}_insert.sql.jinja  {omop_work_table}_combine_upload_tables.sql.jinja  {omop_work_table}_merge._check_for_duplicate_rows.sql.jinja  {omop_work_table}_merge.sql.jinja  {omop_work_table}_merge_check_for_duplicate_rows.sql.jinja  {primary_key_column}_swap_create.sql.jinja  {primary_key_column}_swap_merge.sql.jinja
src/riab/etl/bigquery/templates/cdm_folders/: sample_etl_query.sql.jinja  sample_source_query.sql.jinja  sample_usagi_query.sql.jinja
src/riab/etl/bigquery/templates/cleanup/: CONCEPT_ANCESTOR_remove_custom_concepts.sql.jinja  CONCEPT_ANCESTOR_remove_custom_concepts_by_{omop_table}__{concept_id_column}_usagi_table.sql.jinja  CONCEPT_RELATIONSHIP_remove_custom_concepts.sql.jinja  CONCEPT_RELATIONSHIP_remove_custom_concepts_by_{omop_table}__{concept_id_column}_usagi_table.sql.jinja  CONCEPT_remove_custom_concepts.sql.jinja  CONCEPT_remove_custom_concepts_by_{omop_table}__{concept_id_column}_usagi_table.sql.jinja  SOURCE_ID_TO_OMOP_ID_MAP_remove_ids_by_omop_table.sql.jinja  VOCABULARY_remove_custom_concepts.sql.jinja  (+4 more)
src/riab/etl/sql_server/: __init__.py  achilles.py  cleanup.py  create_cdm_folders.py  create_omop_db.py  ctes.py  data_quality.py  data_quality_dashboard.py  etl.py  etl_base.py  import_vocabularies.py
src/riab/libs/: Achilles.md  Ares.md  CommonDataModel.md  DataQualityDashboard.md  QueryLibrary.md  SqlRender.md
tasks/: generate_queries.py
(+146 files in other folders)
